# gmail_sender_server_demo

./: README.md  pyproject.toml  requirements.txt
scripts/: Item.py  mail.py  main.py
